feat(Pages): add pages routes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "dependencies": {
         "react": "^18",
         "react-dom": "^18",
-        "next": "14.2.7"
+        "next": "14.2.7",
+        "@types/react-window": "latest",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.8.3",
+        "@heroicons/react": "^1.0.6",
+        "@emotion/react": "^11.9.0",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.8.1"
     },
     "devDependencies": {
         "typescript": "^5",
@@ -24,4 +31,3 @@
         "eslint-config-next": "14.2.7"
     }
 }
-  
