--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ NEXT_PUBLIC_APP_ENV = DEV
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID = G-xxxxxxx
 
 NEXT_PUBLIC_API_URL = https://api2-dev.glbgpt.com/api
+
+# Twitter OAuth2.0 client infos
+NEXT_PUBLIC_CLIENT_ID = RWhrTnRBcmpnSUxGSURNaENmZDg6MTpjaQ
+NEXT_PUBLIC_CLIENT_SECRET = DjFASxfPRwSqmTPAF9LKaOPq9NYxE9sOxfMa1ZB7kULyetp5Dy
+NEXT_PUBLIC_CLIENT_CALLBACK = https://dev.defed.finance/callback
+# https://dev.defed.finance
