--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "NODE_OPTIONS=--max-old-space-size=2048 && next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "build:test": "NODE_ENV=test next build && next export",
+        "build:dev": "next build && next export"
     },
     "dependencies": {
         "react": "^18",
@@ -18,7 +20,9 @@
         "@heroicons/react": "^1.0.6",
         "@emotion/react": "^11.9.0",
         "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.8.1"
+        "@emotion/styled": "^11.8.1",
+        "twitter-api-sdk": "latest",
+        "notistack": "^2.0.5"
     },
     "devDependencies": {
         "typescript": "^5",
